--- a/.env.example
+++ b/.env.example
@@ -45,5 +45,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-RG_USER=
-RG_PASS=
+API_USERS=https://randomuser.me/api/
